--- a/src/Components/Projects.jsx/Projects.module.css
+++ b/src/Components/Projects.jsx/Projects.module.css
@@ -1,7 +1,10 @@
 .projectContainer{
     display: flex;
-    flex-direction: column;
-    gap: 5vh;
+    flex-direction: row;
+    flex-wrap: wrap;
+    gap: 3vh;
+    width: 100%;
+    margin: 0 auto;
 }
 
 .card{
@@ -9,11 +12,12 @@
     flex-direction: column;
     gap: 10px;
     backdrop-filter: blur(10px);
-    background-color: rgba(211, 211, 211, 0.2);
+    background-color: rgb(255, 255, 255);
     padding: 3vh 2vw;
     border-radius: 20px;
-    border: 1px solid rgb(128, 128, 128);
-    box-shadow: inset 0 0 10px 7px rgba(128, 128, 128, 0.7);
+    border: 1px solid rgb(211, 211, 211);
+    box-shadow: inset 0 0 10px 7px rgba(211, 211, 221, 0.7);
+    max-width: 40%;
 }
 
 .tagContainer {
@@ -46,4 +50,5 @@
 .cardHeader{
     display: flex;
     justify-content: space-between;
+    align-items: center;
 }
