--- a/src/Components/Layout/Layout.module.css
+++ b/src/Components/Layout/Layout.module.css
@@ -1,20 +1,40 @@
 nav {
-    position: sticky;
-    overflow-x: hidden;
-    top: 0;
-    left: 0;
-    max-width: 100vw;
-    padding: 0 2vw;
+    z-index: 9999;
+    overflow: hidden;
     display: flex;
     justify-content: space-between;
+    align-items: center;
+    position: sticky;
+    top: 0;
+    max-width: 100vw;
+    background: white;
+    height: 6vh;
 }
 
-nav > ul {
-    list-style-type: none;
+ul {
+    margin: 0 2vw;
     padding: 0;
+    display: flex;
+    align-items: center;
+    list-style-type: none;
+}
+
+li {
+    height: 100%;
+    display: block;
 }
 
 a {
+    height: 100%;
     text-decoration: none;
     color: black;
+    padding: 3vh .5vw;
+}
+
+    .navLink:hover{
+        background-color: lightblue;
+    }
+
+.navIcon {
+    font-size: 30px;
 }
